[gd_scene load_steps=12 format=2]

[ext_resource path="res://SISTEMA/EFECTOS/ESPECIALES/ControladorLluvia.gd" type="Script" id=1]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/gota de lluvia1.png" type="Texture" id=2]
[ext_resource path="res://RECURSOS/SONIDOS/AMBIENT/Truenos/Lejanos/2.wav" type="AudioStream" id=3]
[ext_resource path="res://RECURSOS/SONIDOS/AMBIENT/Lluvia/lluvia_media.ogg" type="AudioStream" id=4]
[ext_resource path="res://RECURSOS/SONIDOS/AMBIENT/Vientos/viento_largo2.ogg" type="AudioStream" id=5]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1200, 10, 1 )
flag_disable_z = true
direction = Vector3( -0.26, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 280.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -30.0
scale = 0.8
scale_random = 0.02
color = Color( 1, 1, 1, 0.333333 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1200, 10, 1 )
flag_disable_z = true
direction = Vector3( -0.25, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 280.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -30.0
scale = 0.4
scale_random = 0.02

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1200, 10, 1 )
flag_disable_z = true
direction = Vector3( -0.32, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -30.0
scale = 0.3
scale_random = 0.02
color = Color( 0.54902, 0.54902, 0.54902, 0.596078 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 800, 10, 1 )
flag_disable_z = true
direction = Vector3( -0.25, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 280.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -30.0
scale = 0.4
scale_random = 0.02

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer4/particulas_2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer4/particulas_2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer4/particulas_2:process_material:emission_box_extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 800, 10, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer4/particulas_2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1144, -112 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer4/particulas_2:process_material:direction")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.25, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer4/particulas_2:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "lluvia1"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer4/particulas_2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 6.1, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer4/particulas_2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer4/particulas_2:process_material:emission_box_extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.7, 2.3, 3.1, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 800, 10, 1 ), Vector3( 800, 10, 1 ), Vector3( 1000, 10, 1 ), Vector3( 900, 10, 1 ), Vector3( 1200, 10, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer4/particulas_2:process_material:direction")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 2.7, 3.6, 4.2, 5, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.25, 1, 0 ), Vector3( 0.1, 1, 0 ), Vector3( 1, 1, 0 ), Vector3( 0.1, 1, 0 ), Vector3( -0.25, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer4/particulas_2:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.7, 3.4, 5.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 10.0, 20.0, 20.0, 8.0 ]
}

[node name="ControladorLluvia" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 10

[node name="particulas_1" type="Particles2D" parent="CanvasLayer3"]
position = Vector2( 1088, -144 )
emitting = false
amount = 2
lifetime = 7.0
preprocess = 150.0
speed_scale = 20.0
randomness = 0.36
visibility_rect = Rect2( -200, -250, 400, 500 )
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="particulas_2" type="Particles2D" parent="CanvasLayer"]
position = Vector2( 1144, -144 )
emitting = false
amount = 200
lifetime = 7.0
preprocess = 100.0
speed_scale = 10.0
randomness = 0.27
visibility_rect = Rect2( -200, -250, 400, 500 )
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -10

[node name="particulas_3" type="Particles2D" parent="CanvasLayer2"]
position = Vector2( 1232, -128 )
emitting = false
amount = 20
lifetime = 7.0
preprocess = 80.0
speed_scale = 6.0
visibility_rect = Rect2( -200, -250, 400, 500 )
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="CanvasLayer4" type="CanvasLayer" parent="."]
layer = 10

[node name="particulas_2" type="Particles2D" parent="CanvasLayer4"]
position = Vector2( 1144, -112 )
emitting = false
amount = 500
lifetime = 7.0
preprocess = 180.0
speed_scale = 10.0
randomness = 0.27
visibility_rect = Rect2( -200, -250, 400, 500 )
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="Lluvia" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Lluvia"

[node name="Truenos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Truenos"

[node name="Truenos2" type="AudioStreamPlayer" parent="."]
bus = "Truenos"

[node name="Truenos3" type="AudioStreamPlayer" parent="."]
bus = "Truenos"

[node name="Viento" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/lluvia1 = SubResource( 7 )

[connection signal="finished" from="Truenos" to="." method="_on_Truenos_finished"]
[connection signal="finished" from="Truenos2" to="." method="_on_Truenos2_finished"]
[connection signal="finished" from="Truenos3" to="." method="_on_Truenos3_finished"]
[connection signal="finished" from="Viento" to="." method="_on_Viento_finished"]
